--- a/portfolio.html
+++ b/portfolio.html
@@ -16,8 +16,8 @@
         <a lang=“en” href="./index.html" class="link logo"><span class="logo-accent">Web</span><span class="logo-black">Studio</span> </a>
         <nav class="header-nav">
         <ul class="header-list list">
-                <li class="nav-item"> <a class="header-link-nav" href="./index.html">Студія</a> </li>
-                <li class="nav-item"> <a class="header-link" href="./portfolio.html">Портфоліо</a> </li>
+                <li class="nav-item"> <a class="header-link" href="./index.html">Студія</a> </li>
+                <li class="nav-item"> <a class="header-link-nav" href="./portfolio.html">Портфоліо</a> </li>
                 <li class="nav-item"> <a class="header-link" href="">Контакти</a> </li>
         </ul>
         </nav>
